--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="site_apelido">Identificação do site</string>
     <string name="novo_site">Novo site</string>
     <string name="btn_add">Adicionar novo site</string>
+    <string name="add_favorite">Adicionado aos favoritos.</string>
+    <string name="del_favorite">Removido dos favoritos.</string>
+    <string name="success_remove">Site removido com sucesso.</string>
+    <string name="success_add">Site adicionado com sucesso.</string>
 </resources>
